<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.android.badmintoncounter.MainActivity">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/badminton" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:text="@string/player_a"
                    android:textAllCaps="true"
                    android:textColor="@color/score"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/scoreA"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:background="@drawable/scorecircle"
                    android:gravity="center"
                    android:text="@string/score_a"
                    android:textAllCaps="true"
                    android:textColor="@color/score"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/pointA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/add_point_a" />

                <Button
                    android:id="@+id/netA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:text="@string/net_a" />

                <TextView
                    android:id="@+id/serveA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:background="@drawable/serviceball"
                    android:gravity="center"
                    android:text="@string/service_a" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingRight="20dp"
                    android:paddingTop="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="18dp"
                        android:text="@string/sets_won_a"
                        android:textAlignment="center"
                        android:textColor="@color/counting"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/matchscoreA"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="@drawable/rectangle"
                        android:gravity="center"
                        android:text="@string/match_score_a"
                        android:textAllCaps="true"
                        android:textColor="@color/score"
                        android:textSize="50sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:text="@string/player_b"
                    android:textAllCaps="true"
                    android:textColor="@color/score"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/scoreB"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:background="@drawable/scorecircle"
                    android:gravity="center"
                    android:text="@string/score_b"
                    android:textAllCaps="true"
                    android:textColor="@color/score"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/pointB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/add_point_b" />

                <Button
                    android:id="@+id/netB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:text="@string/net_b" />

                <TextView
                    android:id="@+id/serveB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:background="@drawable/serviceball"
                    android:gravity="center"
                    android:text="@string/service_b" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingRight="20dp"
                    android:paddingTop="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="18dp"
                        android:text="@string/sets_won_b"
                        android:textAlignment="center"
                        android:textColor="@color/counting"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/matchscoreB"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="@drawable/rectangle"
                        android:gravity="center"
                        android:text="@string/match_score_b"
                        android:textAllCaps="true"
                        android:textColor="@color/score"
                        android:textSize="50sp" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/reset"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="25dp"
            android:text="@string/reset" />
    </RelativeLayout>
</ScrollView>